--- a/trLabel/src/main/resources/jdbc.properties
+++ b/trLabel/src/main/resources/jdbc.properties
@@ -3,18 +3,7 @@
 
 #\u672C\u5730
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://112.74.92.17:3306/db_taoren?useUnicode=true&amp;characterEncoding=utf-8&allowMultiQueries=true
-jdbc.username=taoren
-jdbc.password=12358
+jdbc.url=jdbc:mysql://ip:3306/db?useUnicode=true&amp;characterEncoding=utf-8&allowMultiQueries=true
+jdbc.username=
+jdbc.password=
 
-#\u6D4B\u8BD5
-#jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/db_taoren?useUnicode=true&amp;characterEncoding=utf-8&allowMultiQueries=true
-#jdbc.username=taoren
-#jdbc.password=12358
-
-##\u751F\u4EA7
-#jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://rdse0n1376ty793xj943.mysql.rds.aliyuncs.com:3306/tr_db?useUnicode=true&amp;characterEncoding=utf-8&allowMultiQueries=true
-#jdbc.username=tr_db
-#jdbc.password=taoRen1980aTr_db
